--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
     font-style: normal;
 }
 body{
-    background-image: url(/Resource/bg.jpg);
-
+    /* background-image: url(/Resource/bg.jpg); */
+    background-color: #1C1C1D;
 }
 
 .containter{
